# protogen

./: .gitignore  2025-03-05T02-05_export.csv  OT2-7.py  README(KOR).md  README.html  README.md  README.tex  README_ENG.html  README_ENG.md  README_KOR.html  README_KOR.md  Source_for_goldengate-PCR.csv  Stock_8TU_wrong version.csv  app_launcher.py  build_exe.bat  create_design.py  create_protocol.py  d  design_template.csv  functions.py  plate_sample.xlsx  protogen - 복사본.py  protogen.py  protogen_dash.py  protogen_univ.py  protogen_univ_dash.py  protogen_설명서.hwp  protogen_설명서.md  requirements_dash.txt  test_designs.json  test_ot2_config.json  test_protocol_config.json  universal_design_template.csv  well_plate_selector.py
.devcontainer/: 2025-03-05T01-48_export.csv  devcontainer.json
.github/skills/: README.md  requirements.txt
backups/: protogen_backup.py
backups/ml_protogen_system_v2/: README.md  app.py  pyproject.toml
backups/ml_protogen_system_v2/.github/: copilot-instructions.md
backups/ml_protogen_system_v2/projects/Group_1/: metadata.json  model_results.pkl  session_state.json  trainer.pkl
backups/ml_protogen_system_v2/projects/Sample_Project_20251002_151146/: project_config.json
backups/ml_protogen_system_v2/projects/Sample_Project_20251002_151146/models/: model_history.json
backups/ml_protogen_system_v2/projects/Sample_Project_20251013_134736/: project_config.json
backups/ml_protogen_system_v2/projects/TestProject/: metadata.json  model_results.pkl  project_config.json  session_state.json
backups/ml_protogen_system_v2/projects/TestProject/data/: initial_data.csv
backups/ml_protogen_system_v2/projects/test/: metadata.json  session_state.json
backups/ml_protogen_system_v2/src/: ml_core.py
backups/ml_protogen_system_v2/tests/: test_system.py
backups/old/: 2025-03-05T02-05_export.csv  2025-06-17T00-18_export.csv  OT2-7.py  protogen_univ.py
backups/test_ot2_output/: output_wells.csv
commits/: commit_logs.txt  commit_logs_.txt  full_commit_history.xlsx
docs/: Manuscript.docx
main/: __init__.py  file_handlers.py  protocol_generators.py  utils.py  validators.py
ml_protogen_system/: README.md  README_old.md  analyze_beta_carotene.py  app.py  beta-carotene titer.xlsx  config.json  explain_categorical_encoding.py  explain_negative_r2.py  ml_core.py  project_manager.py  requirements.txt  sample_data.csv  start.bat  test_beta_carotene.py  test_data_generator.py  test_experiment_results.csv  test_improved_encoding.py  test_linear_models.py  test_system.py  test_target_transform.py  utils.py
ml_protogen_system_v2/: app.py  requirements.txt
projects/TestProject/: project_data.json
streamlit/: config.toml
test_input/: SourcePlate_Sample.csv  Stock_8TU.csv  assembly_design_template.json  test_input_design.json
test_ot2_output/: protocol.py
test_output/: output_wells.csv  protocol.csv  sources_updated.csv
(+54 files in other folders)
